<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ContactActivity">


    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:elevation="5dp"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:title="@string/titel_contact"
        app:titleTextColor="@android:color/white"

        />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <EditText
            android:id="@+id/et_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/bg_rectangle"
            android:gravity="left"
            android:hint="@string/hint_your_name"
            android:padding="15dp" />
        <EditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/et_url"
            android:layout_marginTop="10dp"
            android:background="@drawable/bg_rectangle"
            android:gravity="left"
            android:hint="@string/hint_enter_mail"
            android:padding="15dp"
            android:visibility="visible"/>

        <EditText
            android:id="@+id/et_website"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/et_url"
            android:layout_marginTop="10dp"
            android:background="@drawable/bg_rectangle"
            android:gravity="left"
            android:hint="@string/hint_website"
            android:padding="15dp" />

        <EditText
            android:id="@+id/et_message"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/bg_rectangle"
            android:gravity="left"
            android:hint="@string/hint_message"
            android:padding="15dp" />
        <Button

            android:id="@+id/btn_send"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_send"
            android:textColor="@android:color/white"
            android:background="@color/colorPrimaryDark"/>

    </LinearLayout>

</LinearLayout>