<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/feedback_activity"
    tools:context=".FeedBackActivity">



    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:elevation="5dp"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:title="@string/title_feedback_activity"
        app:titleTextColor="@android:color/white"

        />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/activity_horizontal_margin"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/msg_feedback"
            android:layout_marginBottom="10dp"
            android:textColor="@color/colorBlack"/>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/widget_user_name"
            android:layout_width="match_parent"
            android:focusable="false"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/tv_user_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:hint="@string/hint_feedback_name"/>

        </android.support.design.widget.TextInputLayout>




        <android.support.design.widget.TextInputLayout
            android:id="@+id/widget_user_email"
            android:layout_width="match_parent"
            android:focusable="false"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/tv_user_email"
                android:layout_width="match_parent"
                android:focusableInTouchMode="false"
                android:focusable="false"
                android:layout_height="wrap_content"
                android:hint="@string/hint_feedback_mail"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/widget_user_feedback"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/et_user_feedback"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_feedback"/>

        </android.support.design.widget.TextInputLayout>



    </LinearLayout>
</LinearLayout>
