<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_registration"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    android:scrollbarAlwaysDrawVerticalTrack="true"
    tools:context=".RegistrationActivity">
    <RelativeLayout
        android:id="@+id/layout_registration"
        android:layout_centerInParent="true"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/registration_form_margin_left"
        android:layout_marginRight="@dimen/registration_form_margin_right"
        android:layout_marginTop="@dimen/registration_form_margin_top"
        android:alpha="0.8"
        android:background="#fff"
        android:elevation="4dp"
        android:orientation="vertical"
        android:padding="@dimen/registration_form_padding">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="@dimen/registration_form_padding">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
            <android.support.design.widget.TextInputLayout
                android:layout_weight="1"
                android:id="@+id/widget_first_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                >
                <EditText
                    android:id="@+id/et_first_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawablePadding="@dimen/registration_widget_drawable_padding"
                    android:hint="@string/hint_enter_first_name"
                    android:inputType="text"
                    android:singleLine="true" />
            </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                android:layout_weight="1"
                android:id="@+id/widget_last_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/et_last_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawablePadding="@dimen/registration_widget_drawable_padding"
                    android:hint="@string/hint_enter_last_name"
                    android:inputType="text"
                    android:singleLine="true" />
            </android.support.design.widget.TextInputLayout>

            </LinearLayout>
            <android.support.design.widget.TextInputLayout
                android:id="@+id/widget_email_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/et_email_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_email"
                    android:drawableTint="@color/colorPrimary"
                    android:drawablePadding="@dimen/registration_widget_drawable_padding"
                    android:hint="@string/hint_enter_email_id"
                    android:inputType="textEmailAddress"
                    android:singleLine="true" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/widget_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/colorPrimary">
                <EditText
                    android:id="@+id/et_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_password"
                    android:drawableTint="@color/colorPrimary"
                    android:drawablePadding="@dimen/registration_widget_drawable_padding"
                    android:hint="@string/hint_password"
                    android:drawableStart="@drawable/ic_password"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:maxLines="1" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/widget_confirm_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_enter_password_again"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/colorPrimary">

                <EditText
                    android:id="@+id/et_confirm_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_password"
                    android:drawablePadding="@dimen/registration_widget_drawable_padding"
                    android:drawableStart="@drawable/ic_password"

                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:maxLines="1" />
            </android.support.design.widget.TextInputLayout>
            <Button
                android:id="@+id/btn_sign_up"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="22dp"
                android:backgroundTint="@color/colorPrimary"
                android:text="@string/btn_sign_up"
                android:textAllCaps="false"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/registration_btn_text_size" />



            <Button
                android:id="@+id/btn_sign_up_facebook"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/com_facebook_button_background_color"
                android:text="@string/btn_sign_up_with_facebook"
                android:visibility="gone"
                android:textAllCaps="false"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/registration_btn_text_size"  />


            <Button
                android:id="@+id/btn_sign_up_google"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:backgroundTint="@color/colorGoogleButton"
                android:text="@string/btn_sign_up_with_google"
                android:textAllCaps="false"
                android:textColor="@color/colorWhite"
                android:visibility="gone"
                android:textSize="@dimen/registration_btn_text_size"  />

            <TextView
                android:id="@+id/tv_sign_up"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:textAlignment="center" />
        </LinearLayout>
    </RelativeLayout>

    <!--<ImageButton
        android:id="@+id/user_profile_image"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_above="@+id/layout_login"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="-120dp"
        android:alpha=".8"
        android:background="@drawable/user_profile_image_background"
        android:elevation="4dp"
        android:src="@drawable/loginprofil1" />-->



</RelativeLayout>