<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_forgot_password"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".ForgotPasswordActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"

        android:alpha="0.8"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="#fff"
        android:elevation="4dp"
        android:padding="20dp"
        >

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:padding="10sp"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:textColor="@color/colorAccent"
            android:textSize="20sp"

            android:text="@string/RESET_YOUR_PASSWORD"
            />
        <TextView
            android:id="@+id/tv_msg"

            android:layout_width="300sp"
            android:layout_height="wrap_content"
            android:layout_marginRight="20sp"
            android:layout_marginLeft="20sp"
            android:layout_marginBottom="10sp"
            android:layout_gravity="center"
            android:padding="15sp"
            android:textSize="16sp"
            android:textColor="@android:color/black"
            android:textAlignment="center"
            android:text="@string/FORGETPASS_INTSTRUCT"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:layout_gravity="center"
            android:textColor="@android:color/black"
            android:text="@string/MAIL_TEXT"
            android:autoLink=""
            android:textAlignment="center"/>

        <EditText
            android:id="@+id/tv_email_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/textview_border"
            android:ems="10"
            android:layout_gravity="center"
            android:inputType="text"
            android:padding="5dp"
            tools:layout_editor_absoluteX="74dp"
            tools:layout_editor_absoluteY="194dp" />

        <Button
            android:id="@+id/btn_reset_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10sp"
            android:layout_marginTop="30sp"
            android:backgroundTint="@color/colorPrimary"
            android:padding="10dp"
            android:layout_gravity="center"

            android:text="@string/RESET_PASSWORD"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="18sp" />


        <TextView
            android:id="@+id/tv_back"
            android:gravity="center"
            android:textColor="@color/colorPrimaryDark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="Back"
            android:textSize="16dp"/>


    </LinearLayout>










</android.support.constraint.ConstraintLayout>