<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    android:scrollbarAlwaysDrawVerticalTrack="true"
    tools:context=".LoginActivity">
    <RelativeLayout
        android:id="@+id/layout_login"
        android:layout_centerInParent="true"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="70dp"
        android:alpha="0.8"
        android:background="@color/loginFromBackground"
        android:elevation="4dp"
        android:orientation="vertical"
        android:padding="@dimen/login_form_padding">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="30dp">
            <android.support.design.widget.TextInputLayout
                android:id="@+id/widget_email_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/et_email_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_email"
                    android:drawableTint="@color/colorPrimary"
                    android:drawablePadding="@dimen/login_form_drawable_pading"
                    android:hint="@string/hint_enter_email_id"
                    android:text="dkewla.kelwa@gmail.com"
                    android:inputType="textEmailAddress"
                    android:singleLine="true" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/widget_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_password"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/colorPrimary">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/et_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableTint="@color/colorPrimary"
                    android:drawablePadding="@dimen/login_form_drawable_pading"
                    android:text="23456"
                    android:drawableStart="@drawable/ic_password"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:drawableLeft="@drawable/ic_password" />
            </android.support.design.widget.TextInputLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <android.support.v7.widget.AppCompatCheckBox
                    android:id="@+id/checkbox_remember_me"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:gravity="center"
                    android:text="@string/label_login_check_box" />

                <TextView
                    android:id="@+id/tv_forgot_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentTop="true"
                    android:layout_centerVertical="true"
                    android:text="@string/label_login_forget_password" />
            </RelativeLayout>

            <Button
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="22dp"
                android:backgroundTint="@color/colorPrimary"
                android:text="@string/btn_sign_in"
                android:textAllCaps="false"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/login_btn_text_size" />


            <Button
                android:id="@+id/btn_login_facebook"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/com_facebook_blue"
                android:text="@string/btn_login_with_facebook"
                android:textAllCaps="false"
                android:visibility="gone"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/login_btn_text_size"  />


            <Button
                android:id="@+id/btn_login_google"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:backgroundTint="@color/colorGoogleButton"
                android:text="Sign in with Google"
                android:textAllCaps="false"
                android:visibility="gone"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/login_btn_text_size"  />




            <TextView
                android:id="@+id/tv_sign_up"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:textAlignment="center" />
        </LinearLayout>
    </RelativeLayout>

   <!-- <ImageButton
        android:id="@+id/user_profile_image"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_above="@+id/layout_login"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="-120dp"
        android:alpha=".8"
        android:background="@drawable/user_profile_image_background"
        android:elevation="4dp"
        android:src="@drawable/loginprofil1" />-->



</RelativeLayout>